# Credit-Risk-Intelligence-and-Default-Prediction-System

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  drift.yml
.streamlit/: secrets.toml.example
docs/: RUNBOOK.md
docs/screenshots/: README.md
models/: champion.joblib  champion_metadata.json
notebooks/: 01_data_audit.ipynb  02_data_cleaning.ipynb  03_exploratory_data_analysis.ipynb  04_feature_engineering.ipynb  05_model_training.ipynb  06_model_evaluation.ipynb  07_dashboard_exports.ipynb
outputs/: current_data.parquet  reference_data.parquet
outputs/metrics/: initial_data_audit.csv
scripts/: evaluate.py  explain.py  export_champion.py  monitor.py  smoke_train.py  train.py
sql/: portfolio_monitoring_queries.sql  schema.sql
src/: data_loader.py
src/credit_risk/: config.py
src/credit_risk/api/: decision.py  features.py  main.py  risk_bands.py  schemas.py
src/credit_risk/dashboard/: app.py
src/credit_risk/data/: __init__.py  audit.py  clean.py  leakage.py  load.py
src/credit_risk/features/: __init__.py  engineering.py
src/credit_risk/models/: __init__.py  calibrate.py  decision.py  evaluate.py  explain.py  load.py  train.py
src/credit_risk/monitoring/: __init__.py  drift.py
src/credit_risk/validation/: __init__.py  metrics.py  splits.py
tests/: test_smoke.py
tests/api/: test_scoring.py
tests/dashboard/: test_app.py
tests/data/: conftest.py  test_clean.py  test_leakage.py  test_load.py
tests/features/: conftest.py  test_build_features.py  test_engineering.py
tests/fixtures/: synthetic_lending.csv
tests/models/: test_calibrate.py  test_explain.py  test_load.py  test_train.py
tests/monitoring/: test_drift.py
tests/validation/: test_metrics.py  test_splits.py
