[project]
name = "credit-risk-intelligence"
version = "0.1.0"
description = "Credit risk analytics and default prediction system for LendingClub loan data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0",
    "numpy>=2.4",
    "scikit-learn>=1.8",
    "xgboost>=3.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ipykernel>=7.2",
    "jupyterlab>=4.5",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "nbstripout>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_risk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.pep8-naming]
# X / y is sklearn's own convention (fit(X, y), predict(X), ...), not a naming mistake.
extend-ignore-names = ["X", "X_train", "X_val", "X_test"]
